--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "out": "next build && next export"
   },
   "dependencies": {
+    "@panzoom/panzoom": "^4.5.1",
     "@uiw/react-textarea-code-editor": "^1.4.4",
     "css-loader": "^6.7.1",
     "next": "12.1.0",
@@ -21,6 +22,7 @@
     "prismjs": "^1.28.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-easy-panzoom": "^0.4.4",
     "react-icons": "^4.4.0",
     "react-medium-image-zoom": "^5.0.1",
     "react-paginate": "^8.1.3",
